get file metadata
